# buddyproject

./: .clang-format  CMakeLists.txt  README.md
Application/: CMakeLists.txt
Application/include/: main.h
Application/src/: CMakeLists.txt  main.cpp
Server/include/: server.h
Server/src/: CMakeLists.txt  server.cpp
